--- a/Skill Tracker/StoryBoards/HomePageStoryboard.storyboard
+++ b/Skill Tracker/StoryBoards/HomePageStoryboard.storyboard
@@ -15,9 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kp1-Ku-P7r">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kp1-Ku-P7r">
                                 <rect key="frame" x="0.0" y="467" width="414" height="395"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="skillCell" id="IjJ-fW-9hU" customClass="skillCell" customModule="Skill_Tracker" customModuleProvider="target">
@@ -66,27 +65,40 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7EG-72-3ih">
-                                <rect key="frame" x="0.0" y="438" width="414" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7EG-72-3ih">
+                                <rect key="frame" x="187" y="439" width="42" height="20"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjU-yB-pKm">
-                                <rect key="frame" x="10" y="102" width="384" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjU-yB-pKm">
+                                <rect key="frame" x="0.0" y="98" width="414" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tDY-Qa-7lT" customClass="LineChartView" customModule="Charts">
-                                <rect key="frame" x="10" y="132" width="394" height="233"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tDY-Qa-7lT" customClass="LineChartView" customModule="Charts">
+                                <rect key="frame" x="10" y="129" width="394" height="250"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="7EG-72-3ih" firstAttribute="centerY" secondItem="DGh-s7-iN2" secondAttribute="centerY" constant="1" id="2Fq-zI-nYB"/>
+                            <constraint firstItem="sjU-yB-pKm" firstAttribute="leading" secondItem="D1O-Nm-oVc" secondAttribute="leading" id="4r2-cn-C4f"/>
+                            <constraint firstItem="tDY-Qa-7lT" firstAttribute="leading" secondItem="D1O-Nm-oVc" secondAttribute="leading" constant="10" id="8V5-QF-Uit"/>
+                            <constraint firstItem="D1O-Nm-oVc" firstAttribute="trailing" secondItem="kp1-Ku-P7r" secondAttribute="trailing" id="E2Y-wj-klu"/>
+                            <constraint firstItem="kp1-Ku-P7r" firstAttribute="leading" secondItem="D1O-Nm-oVc" secondAttribute="leading" id="J7e-wP-qO9"/>
+                            <constraint firstItem="D1O-Nm-oVc" firstAttribute="trailing" secondItem="sjU-yB-pKm" secondAttribute="trailing" id="MvK-UE-hqX"/>
+                            <constraint firstItem="D1O-Nm-oVc" firstAttribute="bottom" secondItem="kp1-Ku-P7r" secondAttribute="bottom" id="TFH-qS-w5p"/>
+                            <constraint firstItem="tDY-Qa-7lT" firstAttribute="top" secondItem="sjU-yB-pKm" secondAttribute="bottom" constant="10" id="Wac-4k-Kys"/>
+                            <constraint firstItem="sjU-yB-pKm" firstAttribute="centerX" secondItem="DGh-s7-iN2" secondAttribute="centerX" id="X7e-Jp-GFM"/>
+                            <constraint firstItem="kp1-Ku-P7r" firstAttribute="top" secondItem="7EG-72-3ih" secondAttribute="bottom" constant="8" id="Y01-Pu-a0F"/>
+                            <constraint firstItem="7EG-72-3ih" firstAttribute="top" secondItem="tDY-Qa-7lT" secondAttribute="bottom" constant="60" id="kcX-cc-Gq3"/>
+                            <constraint firstItem="sjU-yB-pKm" firstAttribute="top" secondItem="D1O-Nm-oVc" secondAttribute="top" constant="10" id="rCg-ve-g5Q"/>
+                            <constraint firstItem="D1O-Nm-oVc" firstAttribute="trailing" secondItem="tDY-Qa-7lT" secondAttribute="trailing" constant="10" id="vTJ-Gp-a2J"/>
+                            <constraint firstItem="7EG-72-3ih" firstAttribute="centerX" secondItem="DGh-s7-iN2" secondAttribute="centerX" constant="1" id="vep-ii-QgW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="D1O-Nm-oVc"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZE0-IG-ghn">
